repair: add spacing between elements on root box

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ body {
     padding: 40px;
     text-align: center;
 }
+
+#root {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
